# marigold

./: .gitignore
Backend/infrastructure/: docker-compose.yml
Backend/libs/: pyproject.toml
Backend/libs/commons/: jwt_commons.py  logger.py  settings.py  validate_jwt.py
Backend/libs/databases/: databases.md  mongo_client.py  redis_client.py
Backend/libs/dto/: dto.md  error_response_dto.py
Backend/libs/exceptions/: auth_exceptions.py
Backend/servers/ai/: Dockerfile
Backend/servers/auth/: Dockerfile  pyproject.toml
Backend/servers/auth/models/: credential.py
Backend/servers/auth/repositories/: credential_repository.py
Backend/servers/auth/services/: jwt_service.py
Backend/servers/calendar/: Dockerfile
Backend/servers/chat/: Dockerfile
Backend/servers/notification/: Dockerfile
Backend/servers/user/: Dockerfile  pyproject.toml
Backend/servers/user/models/: user_document.py
Backend/services/ai/: Dockerfile  pyproject.toml
Backend/services/auth/: Dockerfile  pyproject.toml
Backend/services/auth/handler/: exception_handler.py
Backend/services/calendar/: Dockerfile  pyproject.toml
Backend/services/chat/: Dockerfile  pyproject.toml
Backend/services/notification/: Dockerfile  pyproject.toml
Backend/services/user/: Dockerfile
