[project]
name = "libs"
version = "0.1.0"
description = ""
authors = [
    {name = "marigold-team", email = "huni032285@gmail.com"}
]
readme = "libs.md"
requires-python = "3.11.13"
dependencies = ["beanie (>=2.0.1,<3.0.0)", "pydantic (>=2.12.5,<3.0.0)", "pyjwt (>=2.10.1,<3.0.0)", "pydantic-settings (>=2.12.0,<3.0.0)"]

[tool.poetry]
packages = [
    { include = "commons" },
    { include = "databases" },
    { include = "dto" },
    { include = "exceptions" }
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"