[project]
name = "notification"
version = "0.1.0"
description = ""
authors = [
    {name = "marigold-team",email = "huni032285@gmail.com"}
]
readme = "README.md"
requires-python = "3.11.13"
dependencies = [
    "fastapi (>=0.128.0,<0.129.0)",
    "uvicorn[standard] (>=0.40.0,<0.41.0)",
    "aiokafka (>=0.13.0,<0.14.0)"
]
[tool.poetry.dependencies]
libs = { path = "../../libs", develop = true }

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
